--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -61,14 +61,20 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #252a34;
-$background-color           : #252a34;
+$background-color           : #333333 ;
+$text-color                 : #ffffff;
+$primary-color              : #d3d3d3;
+$border-color               : mix(#fff, $background-color, 20%);
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
-$text-color                 : #eaeaea;
-$border-color               : mix(#fff, $background-color, 20%);
-
-$primary-color              : #8cd2d5;
+$form-background-color      : mix(#000, $background-color, 15%);
+$footer-background-color    : mix($primary-color, #000, 10%);
+$link-color                 : $primary-color;
+$link-color-hover           : mix(#000, $link-color, 25%);
+$link-color-visited         : mix(#fff, $link-color, 25%);
+$masthead-link-color        : $text-color;
+$masthead-link-color-hover  : mix(#fff, $text-color, 20%);
+$navicon-link-color-hover   : mix(#fff, $background-color, 30%);
 
 $success-color              : #62c462;
 $warning-color              : #f89406;
@@ -76,20 +82,22 @@ $danger-color               : #ee5f5b;
 $info-color                 : #52adc8;
 
 /* brands */
-$behance-color              : #1769FF;
 $bluesky-color              : #1184fe;
+$dribbble-color             : #ea4c89;
+$kaggle-color               : #20c0ff;
+$mastodon-color             : #6364ff;
+$orcid-color                : #a6ce39;
+
+$behance-color              : #1769FF;
 $dribbble-color             : #ea4c89;
 $facebook-color             : #3b5998;
 $flickr-color               : #ff0084;
-$foursquare-color           : #0072b1;
-$github-color               : #171516;
+$foursquare-color           : #ffffff;
+$github-color               : #ffffff;
 $google-plus-color          : #dd4b39;
 $instagram-color            : #517fa4;
-$kaggle-color               : #20c0ff;
 $lastfm-color               : #d51007;
 $linkedin-color             : #007bb6;
-$mastodon-color             : #6364ff;
-$orcid-color                : #a6ce39;
 $pinterest-color            : #cb2027;
 $rss-color                  : #fa9b39;
 $soundcloud-color           : #ff3300;
@@ -99,16 +107,15 @@ $twitter-color              : #55acee;
 $vimeo-color                : #1ab7ea;
 $vine-color                 : #00bf8f;
 $youtube-color              : #bb0000;
-$xing-color                 : #006567;
-
+$xing-color                 : #006567
 
 /* links */
-$link-color                 : mix(#000, $info-color, 15%) !default;
-$link-color-hover           : mix(#000, $link-color, 25%) !default;
-$link-color-visited         : mix(#fff, $link-color, 15%) !default;
-$masthead-link-color        : $primary-color !default;
-$masthead-link-color-hover  : mix(#000, $primary-color, 25%) !default;
-$navicon-link-color-hover   : mix(#fff, $primary-color, 75%) !default;
+$link-color                 : $info-color;
+$link-color-hover           : mix(#000, $link-color, 25%);
+$link-color-visited         : mix(#fff, $link-color, 25%);
+$masthead-link-color        : $primary-color;
+$masthead-link-color-hover  : mix(#000, $primary-color, 25%);
+
 
 
 /*
