--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -54,45 +54,40 @@ $sidebar-link-max-width     : 250px;
 /*
    Colors
    ========================================================================== */
-
 $gray                       : #7a8288;
 $dark-gray                  : mix(#000, $gray, 40%);
 $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$background-color           : #333333 ;
-$text-color                 : #ffffff;
-$primary-color              : #d3d3d3;
-$border-color               : mix(#fff, $background-color, 20%);
-$code-background-color      : mix(#000, $background-color, 15%);
-$code-background-color-dark : mix(#000, $background-color, 20%);
-$form-background-color      : mix(#000, $background-color, 15%);
-$footer-background-color    : mix($primary-color, #000, 10%);
+$body-color                 : #fff;
+$background-color           : #fff;
+$code-background-color      : #fafafa;
+$code-background-color-dark : $light-gray;
+$text-color                 : $dark-gray;
+$border-color               : $lighter-gray;
 
-
+$primary-color              : #7a8288;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
 $info-color                 : #52adc8;
 
 /* brands */
-$bluesky-color              : #1184fe;
-$dribbble-color             : #ea4c89;
-$kaggle-color               : #20c0ff;
-$mastodon-color             : #6364ff;
-$orcid-color                : #a6ce39;
-
 $behance-color              : #1769FF;
+$bluesky-color              : #1184fe;
 $dribbble-color             : #ea4c89;
 $facebook-color             : #3b5998;
 $flickr-color               : #ff0084;
-$foursquare-color           : #ffffff;
-$github-color               : #ffffff;
+$foursquare-color           : #0072b1;
+$github-color               : #171516;
 $google-plus-color          : #dd4b39;
 $instagram-color            : #517fa4;
+$kaggle-color               : #20c0ff;
 $lastfm-color               : #d51007;
 $linkedin-color             : #007bb6;
+$mastodon-color             : #6364ff;
+$orcid-color                : #a6ce39;
 $pinterest-color            : #cb2027;
 $rss-color                  : #fa9b39;
 $soundcloud-color           : #ff3300;
@@ -102,15 +97,16 @@ $twitter-color              : #55acee;
 $vimeo-color                : #1ab7ea;
 $vine-color                 : #00bf8f;
 $youtube-color              : #bb0000;
-$xing-color                 : #006567
+$xing-color                 : #006567;
+
 
 /* links */
-$link-color                 : $primary-color;
+$link-color                 : $info-color;
 $link-color-hover           : mix(#000, $link-color, 25%);
 $link-color-visited         : mix(#fff, $link-color, 25%);
-$masthead-link-color        : $text-color;
-$masthead-link-color-hover  : mix(#fff, $text-color, 20%);
-$navicon-link-color-hover   : mix(#fff, $background-color, 30%);
+$masthead-link-color        : $primary-color;
+$masthead-link-color-hover  : mix(#000, $primary-color, 25%);
+
 
 /*
    Breakpoints
