--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -109,13 +109,17 @@ $youtube-color              : #bb0000;
 $xing-color                 : #006567;
 
 
-/* links */
+/* links 
 $link-color                 : $info-color;
 $link-color-hover           : mix(#000, $link-color, 25%);
 $link-color-visited         : mix(#fff, $link-color, 25%);
 $masthead-link-color        : $primary-color;
-$masthead-link-color-hover  : mix(#000, $primary-color, 25%);
-
+$masthead-link-color-hover  : mix(#000, $primary-color, 25%); */
+$link-color                 : mix(#000, $info-color, 15%) !default;
+$link-color-hover           : mix(#000, $link-color, 25%) !default;
+$link-color-visited         : mix(#fff, $link-color, 15%) !default;
+$masthead-link-color        : $primary-color !default;
+$masthead-link-color-hover  : mix(#000, $primary-color, 25%) !default;
 
 /*
    Breakpoints
