--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -60,7 +60,7 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #252a34;
+$body-color                 : #23252e;
 $background-color           : #333333 ;
 $text-color                 : #ffffff;
 $primary-color              : #d3d3d3;
@@ -83,6 +83,7 @@ $danger-color               : #ee5f5b;
 $info-color                 : #52adc8;
 
 /* brands */
+$employer-color             : #ffffff;
 $bluesky-color              : #1184fe;
 $dribbble-color             : #ea4c89;
 $kaggle-color               : #20c0ff;
