--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -61,9 +61,9 @@ $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
 $body-color                 : #23252e;
-$background-color           : #333333 ;
+$background-color           : #23252e ;
 $text-color                 : #ffffff;
-$primary-color              : #d3d3d3;
+$primary-color              : #8cd2d5;
 $border-color               : mix(#fff, $background-color, 20%);
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
