--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -60,8 +60,8 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #23252e;
-$background-color           : #23252e ;
+$body-color                 : #151515;
+$background-color           : #151515;
 $text-color                 : #ffffff;
 $primary-color              : #8cd2d5;
 $border-color               : mix(#fff, $background-color, 20%);
