--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -63,7 +63,7 @@ $lighter-gray               : mix(#fff, $gray, 90%);
 $body-color                 : #151515;
 $background-color           : #151515;
 $text-color                 : #ffffff;
-$primary-color              : #8cd2d5;
+$primary-color              : #f4bf75;
 $border-color               : mix(#fff, $background-color, 20%);
 $code-background-color      : mix(#000, $background-color, 15%);
 $code-background-color-dark : mix(#000, $background-color, 20%);
