--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -4,7 +4,7 @@
 
 .masthead {
   position: fixed;
-  background: #252a34;
+ /* background: #252a34; */
   border-bottom: 1px solid $border-color;
   height: $masthead-height;
   top: 0;
