--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -20,7 +20,7 @@
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
           animation-delay: 0.45s;
-  background-color: mix(#000, $gray, 25%);//$lighter-gray;
+  background-color: mix(#000, $background-color, 30%);//$lighter-gray;
   border-top: 1px solid $light-gray;
    
 
