--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -61,6 +61,7 @@ $border-color: mix(#fff, $background-color, 20%) !default;
 $code-background-color: mix(#000, $background-color, 15%) !default;
 $code-background-color-dark: mix(#000, $background-color, 20%) !default;
 $form-background-color: mix(#000, $background-color, 15%) !default;
+/*
 $footer-background-color: mix(#000, $background-color, 30%) !default;
 $link-color: mix($primary-color, $text-color, 40%) !default;
 $link-color-hover: mix(#fff, $link-color, 25%) !default;
@@ -68,7 +69,7 @@ $link-color-visited: mix(#000, $link-color, 25%) !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: mix(#fff, $text-color, 20%) !default;
 $navicon-link-color-hover: mix(#fff, $background-color, 30%) !default;
-
+*/
 .author__urls.social-icons .svg-inline--fa,
 .page__footer-follow .social-icons .svg-inline--fa {
   color: inherit;
@@ -103,7 +104,7 @@ $primary-color              : #7a8288; */
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #52adc8;
+$info-color                 : #773fd1; /*purple */
 
 /* brands */
 $employer-color             : #ffffff;
@@ -141,10 +142,10 @@ $link-color-visited         : mix(#fff, $link-color, 25%);
 $masthead-link-color        : $primary-color;
 $masthead-link-color-hover  : mix(#000, $primary-color, 25%); */
 $link-color                 : mix(#000, $info-color, 15%) !default;
-$link-color-hover           : mix(#000, $link-color, 25%) !default;
-$link-color-visited         : mix(#fff, $link-color, 15%) !default;
+$link-color-hover           : mix(#000, $link-color, 35%) !default;
+$link-color-visited         : mix(#9c310e, $link-color, 15%) !default;
 $masthead-link-color        : $primary-color !default;
-$masthead-link-color-hover  : mix(#000, $primary-color, 25%) !default; 
+$masthead-link-color-hover  : mix(#9a9c59, $primary-color, 25%) !default; 
 
 /*
    Breakpoints
