--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -104,7 +104,7 @@ $primary-color              : #7a8288; */
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #773fd1; /*purple */
+$info-color                 : #52adc8; /* light blue purple */
 
 /* brands */
 $employer-color             : #ffffff;
@@ -144,7 +144,7 @@ $masthead-link-color-hover  : mix(#000, $primary-color, 25%); */
 $link-color                 : mix(#000, $info-color, 15%) !default;
 $link-color-hover           : mix(#000, $link-color, 35%) !default;
 $link-color-visited         : mix(#9c310e, $link-color, 15%) !default;
-$masthead-link-color        : $primary-color !default;
+$masthead-link-color        : mix(#fff, $primary-color, 25%) !default; 
 $masthead-link-color-hover  : mix(#9a9c59, $primary-color, 25%) !default; 
 
 /*
