--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -5,9 +5,10 @@
 .masthead {
   position: fixed;
   background: $background-color; 
-  border-bottom: 4px solid $border-color;
+  border-bottom: 1px solid $border-color;
   height: $masthead-height;
   top: 0;
+  left: 4em; 
   width: 100%;
 
   -webkit-animation: intro 0.3s both;
@@ -19,7 +20,7 @@
   &__inner-wrap {
     @include container;
     @include clearfix;
-    padding: 2em 2em 2em;
+    padding: 1em 1em 1em;
     font-family: $sans-serif-narrow;
 
     @include breakpoint($x-large) {
