--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -52,8 +52,8 @@
   white-space: nowrap;
 
   &--lg {
-    padding-right: 0;
-    padding-left: 16em;
+    padding-right: 2em;
+    padding-left: 15em;
     font-weight: 700;
   }
 }
