--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -21,7 +21,7 @@
   -webkit-animation-delay: 0.45s;
           animation-delay: 0.45s;
   background-color: mix(#000, $background-color, 30%);//$lighter-gray;
-  border-top: 1px solid $light-gray;
+  border-top: 2px dotted $darker-gray;
    
 
   footer {
