--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -5,7 +5,7 @@
 .masthead {
   position: fixed;
   background: $background-color; 
-  border-bottom: 2px solid $border-color;
+  border-bottom: 2px dashed $border-color;
   height: $masthead-height;
   top: 0;
   width: 100%;
