--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -141,8 +141,8 @@ $link-color-hover           : mix(#000, $link-color, 25%);
 $link-color-visited         : mix(#fff, $link-color, 25%);
 $masthead-link-color        : $primary-color;
 $masthead-link-color-hover  : mix(#000, $primary-color, 25%); */
-$link-color                 : mix(#fff, $info-color, 25%) !default;
-$link-color-hover           : mix(#000, $link-color, 35%) !default;
+$link-color                 : mix(#fff, $info-color, 45%) !default;
+$link-color-hover           : mix(#000, $info-color, 35%) !default;
 $link-color-visited         : mix(#9c310e, $link-color, 45%) !default;
 $masthead-link-color        : mix(#fff, $primary-color, 70%) !default; 
 $masthead-link-color-hover  : mix(#fff, $primary-color, 25%) !default; 
