--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -69,7 +69,7 @@ $link-color-visited: mix(#000, $link-color, 25%) !default;
 $masthead-link-color: $text-color !default;
 $masthead-link-color-hover: mix(#fff, $text-color, 20%) !default;
 $navicon-link-color-hover: mix(#fff, $background-color, 30%) !default;
-*/
+
 .author__urls.social-icons .svg-inline--fa,
 .page__footer-follow .social-icons .svg-inline--fa {
   color: inherit;
@@ -77,7 +77,7 @@ $navicon-link-color-hover: mix(#fff, $background-color, 30%) !default;
 
 .ais-search-box .ais-search-box--input {
   background-color: $form-background-color;
-}
+} */
 $gray                       : #7a8288;
 $dark-gray                  : mix(#000, $gray, 40%);
 $darker-gray                : mix(#000, $gray, 60%);
