--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -20,9 +20,8 @@
           animation: intro 0.3s both;
   -webkit-animation-delay: 0.45s;
           animation-delay: 0.45s;
-  background-color: mix(#000, $background-color, 30%);//$lighter-gray;
-  border-top: 2px dotted $dark-gray;
-   
+  background-color: $lighter-gray;
+  border-top: 1px solid $light-gray;
 
   footer {
     @include clearfix;
