--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -4,8 +4,8 @@
 
 .masthead {
   position: fixed;
-  background: $background-color; 
-  border-bottom: 2px dashed $border-color;
+  background: white;
+  border-bottom: 1px solid $border-color;
   height: $masthead-height;
   top: 0;
   width: 100%;
@@ -23,7 +23,7 @@
     font-family: $sans-serif-narrow;
 
     @include breakpoint($x-large) {
-      max-width: $large;
+      max-width: $x-large;
     }
 
     nav {
@@ -52,7 +52,7 @@
   white-space: nowrap;
 
   &--lg {
-    padding-right: 9em;
+    padding-right: 3em;
     font-weight: 700;
   }
 }
