--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -54,75 +54,41 @@ $sidebar-link-max-width     : 250px;
 /*
    Colors
    ========================================================================== */
-$background-color: #211e1e !default;
-$text-color: #eaeaea !default;
-$primary-color: #c98404 !default;
-$border-color: mix(#fff, $background-color, 20%) !default;
-$code-background-color: mix(#000, $background-color, 15%) !default;
-$code-background-color-dark: mix(#000, $background-color, 20%) !default;
-$form-background-color: mix(#000, $background-color, 15%) !default;
-/*
-$footer-background-color: mix(#000, $background-color, 30%) !default;
-$link-color: mix($primary-color, $text-color, 40%) !default;
-$link-color-hover: mix(#fff, $link-color, 25%) !default;
-$link-color-visited: mix(#000, $link-color, 25%) !default;
-$masthead-link-color: $text-color !default;
-$masthead-link-color-hover: mix(#fff, $text-color, 20%) !default;
-$navicon-link-color-hover: mix(#fff, $background-color, 30%) !default;
 
-.author__urls.social-icons .svg-inline--fa,
-.page__footer-follow .social-icons .svg-inline--fa {
-  color: inherit;
-}
-
-.ais-search-box .ais-search-box--input {
-  background-color: $form-background-color;
-} */
 $gray                       : #7a8288;
 $dark-gray                  : mix(#000, $gray, 40%);
 $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
-/*
-$body-color                 : #151515;
-$background-color           : #151515;
-$text-color                 : #ffffff;
-$primary-color              : #f4bf75;
-$border-color               : mix(#fff, $background-color, 20%);
-$code-background-color      : mix(#000, $background-color, 15%);
-$code-background-color-dark : mix(#000, $background-color, 20%);
 
- $form-background-color      : mix(#000, $background-color, 15%)
 $body-color                 : #fff;
 $background-color           : #fff;
 $code-background-color      : #fafafa;
 $code-background-color-dark : $light-gray;
 $text-color                 : $dark-gray;
 $border-color               : $lighter-gray;
-$primary-color              : #7a8288; */
 
+$primary-color              : #7a8288;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #4f9e53; /* light green purple */
+$info-color                 : #52adc8;
 
 /* brands */
-$employer-color             : #ffffff;
-$bluesky-color              : #1184fe;
-$dribbble-color             : #ea4c89;
-$kaggle-color               : #20c0ff;
-$mastodon-color             : #6364ff;
-$orcid-color                : #a6ce39;
 $behance-color              : #1769FF;
+$bluesky-color              : #1184fe;
 $dribbble-color             : #ea4c89;
 $facebook-color             : #3b5998;
 $flickr-color               : #ff0084;
-$foursquare-color           : #ffffff;
-$github-color               : #ffffff;
+$foursquare-color           : #0072b1;
+$github-color               : #171516;
 $google-plus-color          : #dd4b39;
 $instagram-color            : #517fa4;
+$kaggle-color               : #20c0ff;
 $lastfm-color               : #d51007;
 $linkedin-color             : #007bb6;
+$mastodon-color             : #6364ff;
+$orcid-color                : #a6ce39;
 $pinterest-color            : #cb2027;
 $rss-color                  : #fa9b39;
 $soundcloud-color           : #ff3300;
@@ -135,17 +101,13 @@ $youtube-color              : #bb0000;
 $xing-color                 : #006567;
 
 
-/* links 
+/* links */
 $link-color                 : $info-color;
 $link-color-hover           : mix(#000, $link-color, 25%);
 $link-color-visited         : mix(#fff, $link-color, 25%);
 $masthead-link-color        : $primary-color;
-$masthead-link-color-hover  : mix(#000, $primary-color, 25%); */
-$link-color                 : mix(#fff, $info-color, 45%) !default;
-$link-color-hover           : mix(#000, $info-color, 35%) !default;
-$link-color-visited         : mix(#9c310e, $link-color, 45%) !default;
-$masthead-link-color        : mix(#fff, $primary-color, 70%) !default; 
-$masthead-link-color-hover  : mix(#fff, $primary-color, 25%) !default; 
+$masthead-link-color-hover  : mix(#000, $primary-color, 25%);
+
 
 /*
    Breakpoints
@@ -197,7 +159,7 @@ $susy: (
    ========================================================================== */
 
 $border-radius              : 4px;
-$box-shadow                 : 0 2px 2px rgba(0, 0, 0, 0.125);
-$navicon-width              : 68px;
+$box-shadow                 : 0 1px 1px rgba(0, 0, 0, 0.125);
+$navicon-width              : 28px;
 $navicon-height             : 4px;
 $global-transition          : all 0.2s ease-in-out;
