--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -61,18 +61,18 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 $lighter-gray               : mix(#fff, $gray, 90%);
 
-$body-color                 : #fff;
-$background-color           : #fff;
-$code-background-color      : #fafafa;
-$code-background-color-dark : $light-gray;
-$text-color                 : $dark-gray;
-$border-color               : $lighter-gray;
+$body-color                 : #211e1e;
+$background-color           : #211e1e;
+$code-background-color      : $dark-gray;
+$code-background-color-dark : mix($body-color, $dark-gray, 50%);
+$text-color                 : $light-gray;
+$border-color               : $darker-gray;
 
-$primary-color              : #7a8288;
+$primary-color              : #c98404;
 $success-color              : #62c462;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
-$info-color                 : #52adc8;
+$info-color                 : #4f9e53; /* light green purple */
 
 /* brands */
 $behance-color              : #1769FF;
@@ -105,8 +105,8 @@ $xing-color                 : #006567;
 $link-color                 : $info-color;
 $link-color-hover           : mix(#000, $link-color, 25%);
 $link-color-visited         : mix(#fff, $link-color, 25%);
-$masthead-link-color        : $primary-color;
-$masthead-link-color-hover  : mix(#000, $primary-color, 25%);
+$masthead-link-color        : mix(#fff, $primary-color, 70%); 
+$masthead-link-color-hover  : mix(#fff, $primary-color, 25%); 
 
 
 /*
