--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -102,9 +102,9 @@ $xing-color                 : #006567;
 
 
 /* links */
-$link-color                 : $info-color;
+$link-color                 : mix(#fff, $info-color, 25%);
 $link-color-hover           : mix(#000, $link-color, 25%);
-$link-color-visited         : mix(#fff, $link-color, 25%);
+$link-color-visited         : mix(#fff, $primary-color, 25%);
 $masthead-link-color        : mix(#fff, $primary-color, 70%); 
 $masthead-link-color-hover  : mix(#fff, $primary-color, 25%); 
 
