--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -53,7 +53,7 @@
     {% endif %}
     
     {% if post.citation and post.paperurl and post.slidesurl %}
-      <p>Recommended citation: {{ post.citation }}<br /><a text-decoration:none; href="{{ post.paperurl }}" class="btn">Download PDF</a> | <a text-decoration:none; href="{{ post.slidesurl }}" class="btn">Download Slides</a></p>
+      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}" text-decoration:none; class="btn">Download PDF</a> | <a href="{{ post.slidesurl }}" text-decoration:none; class="btn">Download Slides</a></p>
     {% elsif post.citation and post.paperurl %}
       <p>Recommended citation: {{ post.citation }}<br /><a text-decoration:none; href="{{ post.paperurl }}" class="btn">Download PDF</a></p>
     {% elsif post.citation and post.slidesurl %}
@@ -63,7 +63,7 @@
     {% elsif post.paperurl %}
       <p><a text-decoration:none; href=" {{ post.paperurl }} " class="btn">Download PDF</a></p>
     {% elsif post.slidesurl %}
-      <p>Download <a text-decoration:none; href="{{ post.slidesurl }}" class="btn">Download Slides</a></p></p>
+      <p>Download <a href="{{ post.slidesurl }}" class="btn">Download Slides</a></p></p>
     {% endif %}
 
   </article>
