--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -53,7 +53,7 @@
     {% endif %}
     
     {% if post.citation and post.paperurl and post.slidesurl %}
-      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}" class="btn">Download PDF</a> | <a href="{{ post.slidesurl }}" class="btn">Download Slides</a></p>
+      <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}" class="btn">Download PDF</a> &nbsp; <a href="{{ post.slidesurl }}" class="btn">Download Slides</a></p>
     {% elsif post.citation and post.paperurl %}
       <p>Recommended citation: {{ post.citation }}<br /><a href="{{ post.paperurl }}" class="btn">Download PDF</a></p>
     {% elsif post.citation and post.slidesurl %}
