--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -48,7 +48,7 @@ layout: default
         {{ content }}
 
         {% if page.citation and page.paperurl and page.slidesurl %}
-          <p style="font-size: smaller">Recommended citation: {{ page.citation }}<br /><a href="{{ page.paperurl }}" class="btn">Download PDF</a> | <a href="{{ page.slidesurl }}" class="btn">Download Slides</a></p>
+          <p style="font-size: smaller">Recommended citation: {{ page.citation }}<br /><a href="{{ page.paperurl }}" class="btn">Download PDF</a> &nbsp; <a href="{{ page.slidesurl }}" class="btn">Download Slides</a></p>
         {% elsif page.citation and page.paperurl %}
           <p style="font-size: smaller">Recommended citation: {{ page.citation }}<br /><a href="{{ page.paperurl }}" class="btn">Download PDF</a></p>
         {% elsif page.citation and page.slidesurl %}
