--- a/_sass/_buttons.scss
+++ b/_sass/_buttons.scss
@@ -23,7 +23,7 @@
   cursor: pointer;
 
   &:hover {
-    background-color: mix(white, #000, 20%);
+    background-color: mix(black, $primary-color, 50%);
   }
 
   .icon {
