--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -69,7 +69,7 @@ $text-color                 : $light-gray;
 $border-color               : $darker-gray;
 
 $primary-color              : #c98404;
-$success-color              : #62c462;
+$success-color              : #408040;
 $warning-color              : #f89406;
 $danger-color               : #ee5f5b;
 $info-color                 : #4f9e53; /* light green purple */
