--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -63,7 +63,7 @@ $lighter-gray               : mix(#fff, $gray, 90%);
 
 $body-color                 : #211e1e;
 $background-color           : #211e1e;
-$code-background-color      : $darker-gray;
+$code-background-color      : black;
 $code-background-color-dark : mix($body-color, $dark-gray, 50%);
 $text-color                 : $light-gray;
 $border-color               : $darker-gray;
